--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kamakase",
+  "name": "ttttsssstttt",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,8 +18,11 @@
   "dependencies": {
     "@auth/core": "^0.14.0",
     "@auth/drizzle-adapter": "^0.3.2",
+    "@hookform/resolvers": "^3.3.1",
     "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.35.0",
@@ -27,7 +30,7 @@
     "@trpc/next": "^10.38.1",
     "@trpc/react-query": "^10.38.1",
     "@trpc/server": "^10.38.1",
-    "@types/node": "20.5.9",
+    "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -35,15 +38,16 @@
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
-    "eslint": "8.48.0",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "kirimase": "^0.0.9",
+    "kirimase": "^0.0.10",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
